--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <div class="container">
+    <div id="data" class="container">
 
         <div class="logo d-flex">
             <img src="assets/img/logo.png" alt="">
@@ -28,8 +28,8 @@
         </div>
 
         <div class="tasks d-flex">
-<input type="text" placeholder="New Task">
-<button class="btn">Aggiungi</button>
+            <input type="text" placeholder="New Task">
+            <button class="btn">Aggiungi</button>
         </div>
 
         <div class="task">
