--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
 
         <div class="tasks d-flex">
-            <input type="text" placeholder="New Task">
-            <button class="btn">Aggiungi</button>
+            <input v-model="newTask.text" type="text" placeholder="New Task">
+            <button @click="addNewTask()" class="btn">Aggiungi</button>
         </div>
 
         <div class="task">
